--- a/src/main/resources/templates/admin/series/add-series-api.html
+++ b/src/main/resources/templates/admin/series/add-series-api.html
@@ -9,7 +9,7 @@
 
 <div class="Layout-module-internal-page--krBv">
     <div th:replace="~{header :: header}"></div>
-    <h1 class="page-header-admin">Panel administracyjny - dodaj serial</h1>
+    <h1 class="page-header-admin">Administration panel - Add series by API</h1>
     <div id="content" class="admin-panel">
         <div th:replace="~{admin/sidebar :: sidebar}"></div>
         <div class="main-content">
@@ -19,12 +19,12 @@
                     <tr>
                         <td>
                             <input class="text-input-style" type="text" name="imdbId" th:field="*{imdbId}" pattern="^tt\d{5,8}$"
-                                   placeholder="Wpisz IMDB ID [tt642624]" required></td>
+                                   placeholder="IMDb ID [tt642624]" required></td>
                     </tr>
                     <tr>
                         <td>
                             <div class="flex-container">
-                                <label for="promoted" class="checkbox-label">Promowanie na stronie głównej:</label>
+                                <label for="promoted" class="checkbox-label">Promoted: </label>
                                 <input type="checkbox" id="promoted" name="promoted" th:field="*{promoted}">
                             </div>
                         </td>
@@ -33,7 +33,7 @@
                 <div class="submit-button-movie-page">
                     <button type="submit"
                             class="PlayButtonText-module-container-tunCR Buttons-module-primary--YHdl"
-                            tabindex="0">Dodaj serial
+                            tabindex="0">Add
                     </button>
                 </div>
             </form>
