--- a/src/main/resources/templates/admin/users/change-password-form.html
+++ b/src/main/resources/templates/admin/users/change-password-form.html
@@ -14,7 +14,7 @@
             <div class="section-wrapper">
                 <article id="password-block" class="page-info">
                     <div class="page-title">
-                        <h1 class="page-title__header">Zmień hasło</h1>
+                        <h1 class="page-title__header">Change password</h1>
                     </div>
                     <div th:if="${error}">
                         <div class="manage-message-login" th:text="${error}"></div>
@@ -25,34 +25,30 @@
                     <div class="page-info-container page-container page-container--no-padding">
                         <div class="form-max-width change-password-form">
                             <form action="#" th:action="@{/change-password}" method="post">
-                                <!-- Dotychczasowe hasło -->
                                 <div class="form-elem-wrap double-margin">
-                                    <input class="form-elem" autocomplete="off" placeholder="Dotychczasowe hasło"
+                                    <input class="form-elem" autocomplete="off" placeholder="Current password"
                                            name="oldPassword" type="password">
-                                    <span class="label-placeholder">Dotychczasowe hasło</span>
+                                    <span class="label-placeholder">Current password</span>
                                 </div>
 
-                                <!-- Nowe hasło -->
                                 <div class="form-elem-wrap">
                                     <input class="form-elem password-indicator" autocomplete="off"
-                                           placeholder="Nowe hasło" name="newPassword" type="password">
-                                    <span class="label-placeholder">Nowe hasło</span>
+                                           placeholder="New Password" name="newPassword" type="password">
+                                    <span class="label-placeholder">New Password</span>
                                 </div>
 
-                                <!-- Potwierdź nowe hasło -->
                                 <div class="form-elem-wrap zero-margin">
-                                    <input class="form-elem" autocomplete="off" placeholder="Potwierdź hasło"
+                                    <input class="form-elem" autocomplete="off" placeholder="Confirm password"
                                            name="confirmPassword" type="password">
-                                    <span class="label-placeholder">Potwierdź hasło</span>
+                                    <span class="label-placeholder">Confirm password</span>
                                 </div>
 
-                                <!-- Przyciski -->
                                 <div class="form-button-space form-button-space-account">
                                     <div class="form-button-space__cancel">
-                                        <a th:href="@{/account}" class="btn btn-bordered full-width">Anuluj</a>
+                                        <a th:href="@{/account}" class="btn btn-bordered full-width">Cancel</a>
                                     </div>
                                     <div class="form-button-space__submit">
-                                        <button type="submit" id="submit-change-password" class="btn btn-red full-width">Zmień hasło</button>
+                                        <button type="submit" id="submit-change-password" class="btn btn-red full-width">Change</button>
                                     </div>
                                 </div>
                             </form>
