--- a/src/main/resources/templates/admin/users/watched.html
+++ b/src/main/resources/templates/admin/users/watched.html
@@ -26,7 +26,7 @@
                                 <div class="Scaffold-module-scaffold-F6aIC">
                                     <div>
                                         <div class="SearchFilters-module-container-d0i8m">
-                                            <div class="h1-login-form-header-HD2dE">Dzienik aktywności</div>
+                                            <div class="h1-login-form-header-HD2dE">Watched</div>
                                         </div>
                                     </div>
                                 </div>
@@ -51,14 +51,6 @@
                                                         </a>
                                                         <div class="Item-module-image-CGday"
                                                              th:style="'background-image: url(' + ${item.imageUrl} + ');'">
-                                                        </div>
-                                                        <div class="Item-module-curtain-EV2Ya">
-                                                            <div class="InteractionIcons-module-container-apGgr">
-                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateUp-S4se-"
-                                                                     data-testhook="item-rating-up"></div>
-                                                                <div class="RateButtons-module-container-oL7lm RateButtons-module-isItem-5vKa8 RateButtons-module-rateDown-DblB1"
-                                                                     data-testhook="item-rating-down"></div>
-                                                            </div>
                                                         </div>
                                                     </div>
                                                     <div class="Item-module-below-BMw6u Item-module-centeredExperiment-Q0zBG">
