--- a/src/main/resources/templates/admin/series/add-episode-form.html
+++ b/src/main/resources/templates/admin/series/add-episode-form.html
@@ -9,15 +9,15 @@
 
 <div class="Layout-module-internal-page--krBv">
     <div th:replace="~{header :: header}"></div>
-    <h1 class="page-header-admin">Panel administracyjny - dodaj serial</h1>
+    <h1 class="page-header-admin" th:text="'Administration panel - add episode ' + ${episodeNumber} + ' ,season ' + ${seasonNumber}">Administration panel -add episode</h1>
     <div id="content" class="admin-panel">
         <div th:replace="~{admin/sidebar :: sidebar}"></div>
         <div class="main-content">
             <div id="customDialogOverlay" class="custom-dialog-overlay">
                 <div id="customDialogBox" class="custom-dialog-box">
-                    <p>Czy chcesz dodać kolejny odcinek do tego sezonu?</p>
-                    <button onclick="submitForm('addEpisode')">Dodaj odcinek</button>
-                    <button onclick="submitForm('addSeason')">Zakończ sezon</button>
+                    <p>Do you want to add next episode to this season?</p>
+                    <button onclick="submitForm('addEpisode')">Add episode</button>
+                    <button onclick="submitForm('addSeason')">Finish season</button>
                 </div>
             </div>
             <form id="episodeForm" th:action="@{/admin/add-episode/{seriesId}/{seasonNumber}/{episodeNumber}(seriesId=${seriesId}, seasonNumber=${seasonNumber}, episodeNumber=${episodeNumber})}" method="post" th:object="${episode}">
@@ -25,24 +25,24 @@
                 <div class="grid-container">
                     <input type="hidden" name="seasonsCount" th:value="${seasonsCount}">
                     <tr>
-                        <td><input class="text-input-style" type="text" name="episodeTitle" th:field="*{episodeTitle}" placeholder="Tytuł epizodu" required></td>
+                        <td><input class="text-input-style" type="text" name="episodeTitle" th:field="*{episodeTitle}" placeholder="Title" required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="mediaUrl" th:field="*{mediaUrl}" placeholder="URL mediów" pattern="^(https?://www\.|https?://|www\.)\S+" required></td>
+                        <td><input class="text-input-style" type="text" name="mediaUrl" th:field="*{mediaUrl}" placeholder="Media URL" pattern="^(https?://www\.|https?://|www\.)\S+" required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="mediaUrl" th:field="*{imageUrl}" pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="Wpisz adres URL zdjęcia epizodu"
+                        <td><input class="text-input-style" type="text" name="imageUrl" th:field="*{imageUrl}" pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="Image URL"
                                    required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="durationMinutes" th:field="*{durationMinutes}" placeholder="Czas trwania [min]" required pattern="^(?:[1-9]|[1-9][0-9]|1[0-9]{2}|2[0-3][0-9]|240)$"></td>
+                        <td><input class="text-input-style" type="text" name="durationMinutes" th:field="*{durationMinutes}" placeholder="Duration [min]" required pattern="^(?:[1-9]|[1-9][0-9]|1[0-9]{2}|2[0-3][0-9]|240)$"></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="episodeDescription" th:field="*{episodeDescription}" placeholder="Opis epizodu"  required></td>
+                        <td><input class="text-input-style" type="text" name="episodeDescription" th:field="*{episodeDescription}" placeholder="Description"  required></td>
                     </tr>
                 </div>
                 <div class="submit-button-movie-page">
-                    <button type="button" onclick="showConfirmDialog()" class="PlayButtonText-module-container-tunCR Buttons-module-primary--YHdl" tabindex="0">Dodaj</button>
+                    <button type="button" onclick="showConfirmDialog()" class="PlayButtonText-module-container-tunCR Buttons-module-primary--YHdl" tabindex="0">Add</button>
                     <input type="hidden" id="action" name="action" value="">
                 </div>
             </form>
